tests/baselines/reference/symbolProperty37.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty37.ts(2,5): error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.
tests/cases/conformance/es6/Symbols/symbolProperty37.ts(3,5): error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.


==== tests/cases/conformance/es6/Symbols/symbolProperty37.ts (2 errors) ====
    interface I {
        [Symbol.isConcatSpreadable]: string;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.
        [Symbol.isConcatSpreadable]: string;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.
    }